--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>aqeltect</title>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.13.3/dist/cdn.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -12,7 +12,7 @@
     <header >
         <nav class="h-[95px] bg-white  grid grid-cols-10 gap-4 p-7">
             <div class=" col-span-1">
-                <img src="./svg/aqeltech.svg" />
+                <img class="" src="./svg/aqeltech.svg" />
 
             </div>
             <div class="flex px-[120px] justify-around col-span-8   align-items">
